--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@react-three/fiber": "^8.17.14",
     "@tailwindcss/vite": "^4.0.1",
     "clsx": "^2.1.1",
+    "dotted-map": "^2.2.3",
     "lucide-react": "^0.474.0",
     "motion": "^12.0.6",
+    "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^3.0.1",
